# ncnn_ocr

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  bpe_tokenizer.cpp  expression_layer.cpp  expression_layer.h  glm_model.json  hunyuan_ocr.cpp  hunyuan_ocr.h  main.cpp  merges.txt  model.json  paddleocr_vl_model.json  vocab.txt
assets/: stand_answer.txt
models/: decoder.ncnn.param  vision.ncnn.param
scripts/: export_modules.py  export_vision_ncnn.py  hunyuan_ocr_add_kvcache.py  hunyuan_ocr_tokenizer.py  hyocr_modules_modify.py  run_ncnn_ocr.py  run_ts_ocr.py  trace_export.py  verify_modules.py
scripts/glm/: add_kvcache.py  download.py  export_modules.py  export_tokenizer.py  export_vision_ncnn.py  inspect_model.py  modules.py  run_ncnn_ocr.py  trace_export.py  verify_modules.py  verify_ncnn.py
scripts/glm/ncnn/: glm_decoder_ncnn.py  glm_decoder_pnnx.py  glm_lm_head_ncnn.py  glm_lm_head_pnnx.py  glm_text_embed_ncnn.py  glm_text_embed_pnnx.py  glm_vision_ncnn.py  glm_vision_pnnx.py
scripts/hunyuan/: add_kvcache.py  export_modules.py  export_tokenizer.py  export_vision_ncnn.py  modules.py  run_ncnn_ocr.py  run_ts_ocr.py  trace_export.py  verify_modules.py
scripts/hunyuan/ncnn/: vision_encoder_ncnn.py  vision_encoder_pnnx.py
scripts/hunyuan/ts_pnnx/: decoder_ncnn.py  decoder_pnnx.py  lm_head_ncnn.py  lm_head_pnnx.py  text_embed_ncnn.py  text_embed_pnnx.py
scripts/ncnn/: decoder.ncnn.param.nokv  lm_head.ncnn.param  text_embed.ncnn.param
scripts/paddleocr_vl/: add_kvcache.py  debug_logits.py  debug_vision.py  download.py  export_modules.py  export_tokenizer.py  export_vision_ncnn.py  modules.py  verify_modules.py  verify_ncnn.py
scripts/paddleocr_vl/ncnn/: pdvl_decoder_ncnn.py  pdvl_decoder_pnnx.py  pdvl_lm_head_ncnn.py  pdvl_lm_head_pnnx.py  pdvl_text_embed_ncnn.py  pdvl_text_embed_pnnx.py  pdvl_vision_ncnn.py  pdvl_vision_pnnx.py
scripts/ppocrv6/: RESERVED.md
showcase/: 00_hunyuan_ocr.md  01_glm_ocr.md  02_paddleocr_vl.md
src/: CMakeLists.txt  bpe_tokenizer.cpp  bpe_tokenizer.h  glm_ocr.cpp  glm_ocr.h  hunyuan_ocr.cpp  hunyuan_ocr.h  main.cpp  ocr_base.h  paddleocr_vl.cpp  paddleocr_vl.h  sampling.cpp  sampling.h  text_runtime.cpp  text_runtime.h  utf8_args.h
tutorial/: README_CN.md
